# flow-vpn

./: .gitignore  README.md
apps/bot/: .env.example  README.md  alembic.ini  pyproject.toml
apps/bot/alembic/: README  env.py  script.py.mako
apps/bot/alembic/versions/: 20260412_000001_create_users_table.py  20260412_000002_create_app_settings_table.py  20260412_000003_create_vpn_accesses_table.py  20260412_000004_create_vpn_access_events_table.py  20260412_000005_add_client_portal_entities.py  20260412_000007_vpn_accesses_drop_user_id_unique.py  20260412_000008_add_max_vpn_accesses_per_user_to_app_settings.py  20260412_000009_add_support_tickets.py  20260412_000010_add_broadcasts.py  20260413_000011_add_support_ticket_rating.py  20260413_000012_add_promo_type_and_scope.py  20260414_000013_add_admin_bulk_operations.py  20260414_000014_add_source_operation_id_to_admin_bulk_operations.py  20260414_000015_add_billing_tables.py  bc2556ac9285_reviews_unique_user_id_constraint.py
apps/bot/src/: __init__.py  main.py
apps/bot/src/app/: __init__.py  config.py  container.py  logging.py
apps/bot/src/application/account/: __init__.py  dto.py  use_cases.py
apps/bot/src/application/admin/: __init__.py  accesses.py  common.py  dashboard.py  dto.py  use_cases.py  users.py
apps/bot/src/application/billing/: dto.py  ports.py
apps/bot/src/application/broadcasts/: __init__.py  dto.py  ports.py  use_cases.py
apps/bot/src/application/promos/: __init__.py  admin.py  common.py  dto.py  ports.py  public.py  (+1 more)
apps/bot/src/core/: config.py
apps/bot/src/handlers/: __init__.py
apps/bot/src/infrastructure/: redis.py
apps/bot/src/keyboards/: __init__.py
apps/bot/src/repositories/: __init__.py
apps/bot/src/states/: __init__.py
apps/bot/tests/: conftest.py
apps/bot/tests/application/: test_admin_bulk.py  test_admin_vpn.py  test_broadcasts.py  test_promos.py  test_referrals.py  test_reviews.py  test_runtime.py  test_support.py  test_vpn_disable.py  test_vpn_use_cases.py
apps/bot/tests/middleware/: test_rate_limit.py
(+204 files in other folders)
