[project]
name = "flow-vpn-bot"
version = "0.1.0"
description = "Telegram bot for Flow VPN: user onboarding, subscription flows, VPN access management, notifications, and support entrypoints."
authors = [
    { name = "k1rson", email = "vlad2k15@bk.ru" },
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
keywords = ["telegram", "bot", "vpn", "flow-vpn", "aiogram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "aiogram>=3.20.0,<4.0.0",
    "aiofiles>=24.1.0,<25.0.0",
    "alembic>=1.16.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "httpx[socks]>=0.28.1",
    "pydantic-settings>=2.10.0,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "redis[hiredis]>=6.0.0,<7.0.0",
    "sqlalchemy>=2.0.40,<3.0.0",
    "structlog>=25.4.0,<26.0.0",
    "aiohttp-socks>=0.11.0",
    "dishka<2.0.0,>=1.9.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0,<2.0.0",
    "pytest>=8.3.0,<9.0.0",
    "pytest-asyncio>=0.26.0,<1.0.0",
    "ruff>=0.11.0,<1.0.0",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "python -m src.main"
lint = "ruff check src alembic"
format = "ruff format src alembic"
test = "pytest"
db-upgrade = "alembic upgrade head"
db-current = "alembic current"
db-heads = "alembic heads"
db-revision = "alembic revision --autogenerate"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
plugins = []
